# whatcanirun

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.claude  LICENSE  README.md  compose.claude.yml  pyproject.toml
.claude/: settings.local.json  skills-lock.json
.claude/hooks/: compact-reminder.sh  detect-milestone-complete.sh  post-tool-use-failure-log.sh  pre-tool-use-safety.sh  reload-after-compact.sh  save-context-before-compact.sh
.devcontainer/: Dockerfile  init-firewall.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: CP-DATA-QUALITY.md  MCP.md  PRD.md  SCENARIOS.md  TRUST.md
docs/ADRs/: ADR-001-computeprices-canonical.md  ADR-002-huggingface-canonical-architecture.md  ADR-003-aa-optional-enrichment.md  ADR-004-trust-envelope-required.md  ADR-005-gpu-supplement-yaml.md  ADR-006-benchmark-cells-parquet.md  ADR-007-stdio-transport.md  ADR-008-v1-stack.md  ADR-009-v2-stack.md  ADR-010-tps-single-stream.md  ADR-011-observability-v2-only.md  ADR-012-auth-email-otp.md  ADR-013-snapshot-fallback.md  ADR-014-duckdb-resource-only.md  ADR-015-raw-projection-pattern.md  README.md
sbx-kit/: spec.yaml
scripts/: capture_cp_gpus_fixture.py  install_host_uv.sh  run_e2e_scenarios.sh  run_mcp_docker.sh
scripts/m10/: README.md  __init__.py  _sketch.py  merge_candidate_to_parquet.py  sanity_check_cells.py
seeds/: aa_slug_mapping.yaml  benchmark_cells.README.md  benchmark_cells.parquet  gpu_catalog_snapshot.yaml  gpus_supplement.yaml  quantizations.yaml  tracked_models.yaml  workload_profiles.yaml
seeds/benchmark_cells.sources/: README.md
spec/: INDEX.md  M00-bootstrap.md  M01-catalog-supplements.md  M02-computeprices-client.md  M03-hf-model-sync.md  M04-aa-optional-client.md  M05-workload-profiles.md  M06-fit-check.md  M07-tps-estimator.md  M08-cost-cells.md  M09-mcp-server.md  M10-benchmark-seeds.md  M11-tests-docs.md  M12-release.md  SHARED.md
src/whatcanirun/: __init__.py  paths.py  server.py
tests/: conftest.py  test_paths.py  test_prefetch_cli.py  test_server_skeleton.py  test_smoke.py
tests/catalog/: test_benchmark_cells.py  test_benchmark_cells_seed.py  test_deepseek_mla.py  test_family_detection.py  test_hf_model_schema.py  test_hf_schema_evolution.py  test_hf_sync.py  test_loaders.py  test_mixtral_moe.py  test_quantizations_yaml.py  test_round_trip.py  test_security_hardening.py  test_seed_join.py  test_seed_schemas.py  test_sync_all_tracked.py  test_unknown_family.py  test_workload.py
tests/e2e/: __init__.py  _claude_loop.py  conftest.py  test_scenarios_claude_in_loop.py
tests/fixtures/: README.md  aa_models_2026-05-27.json  cp_gpu_prices_2026-05-26.json  cp_gpus_2026-05-26.json  cp_llm_models_2026-05-26.json  cp_llm_prices_2026-05-26.json  hf_mistral-large_config.json  hf_mistral-small_config.json  hf_qwen-2-5-coder-32b_config.json
tests/inference/: test_fit_check.py  (+1 more)
(+77 files in other folders)
