[project]
name = "whatcanirun"
version = "0.1.0"
description = "MCP server: convert LLM inference budgets into ranked, source-backed plans"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Mahesh Babu Gorantla" },
]
keywords = ["mcp", "llm", "inference", "pricing", "gpu", "budget"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.10,<3",
    "pydantic>=2",
    "httpx[http2]>=0.27",
    "tenacity>=8",
    "duckdb>=1.1",
    "huggingface-hub>=0.26",
    "pyarrow>=18",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4",
    "types-pyyaml",
]

[project.scripts]
whatcanirun-mcp = "whatcanirun.server:main"

[project.urls]
Homepage = "https://github.com/maheshbabugorantla/whatcanirun"
Repository = "https://github.com/maheshbabugorantla/whatcanirun"
Issues = "https://github.com/maheshbabugorantla/whatcanirun/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatcanirun"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv*", ".bin", "sbx-kit", ".agents"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "ASYNC",    # async correctness
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers -m 'not network and not release'"
markers = [
    "integration: tests that exercise the MCP tool surface end-to-end",
    "schema_evolution: tests that prove projection tolerates new upstream fields",
    "network: tests that make live HTTP requests; deselected by default (CI does not run them). Run locally with `pytest -m network` before releases.",
    "release: tests that drive the installed `whatcanirun-mcp` binary over stdio with FastMCP Client; deselected by default. Run via `pytest -m release` or `scripts/install_host_uv.sh` as part of the M12 release gate.",
]
